--- a/src/Resources/config/grids/setono_sylius_trustpilot_admin_channel_configuration.yaml
+++ b/src/Resources/config/grids/setono_sylius_trustpilot_admin_channel_configuration.yaml
@@ -30,5 +30,7 @@ sylius_grid:
                     create:
                         type: create
                 item:
+                    update:
+                        type: update
                     delete:
                         type: delete
