--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,10 @@
         "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0",
         "symfony/form": "^4.4 || ^5.4 || ^6.0",
         "symfony/http-foundation": "^4.4 || ^5.4 || ^6.0",
-        "symfony/http-kernel": "^4.4 || ^5.4 || ^6.0",
         "symfony/messenger": "^4.4 || ^5.4 || ^6.0",
         "symfony/options-resolver": "^4.4 || ^5.4 || ^6.0",
+        "symfony/routing": "^4.4 || ^5.4 || ^6.0",
+        "symfony/translation-contracts": "^2.5 || ^3.1",
         "symfony/workflow": "^4.4 || ^5.4 || ^6.0",
         "twig/twig": "^2.15",
         "webmozart/assert": "^1.11"
